samples/_failures_safe/1761436449_d4c480_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2ca9642f.c: In function ‘main’:
./samples/SAFE/__tmp_2ca9642f.c:141:13: error: ‘error’ undeclared (first use in this function); did you mean ‘perror’?
  141 |             error
      |             ^~~~~
      |             perror
./samples/SAFE/__tmp_2ca9642f.c:141:13: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_2ca9642f.c:141:18: error: expected ‘;’ at end of input
  141 |             error
      |                  ^
      |                  ;
./samples/SAFE/__tmp_2ca9642f.c:141:13: error: expected declaration or statement at end of input
  141 |             error
      |             ^~~~~
./samples/SAFE/__tmp_2ca9642f.c:141:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2ca9642f.c:141:13: error: expected declaration or statement at end of input
